# shrekd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  main.yml
home/: index.html
home/static/: main.css
src/: config.rs  error.rs  main.rs  routes.rs  types.rs  utils.rs
src/api/: file.rs  get.rs  mod.rs  paste.rs  redirect.rs  url.rs
src/home/: mod.rs
src/routes/: file.rs  mod.rs  paste.rs  redirect.rs  root.rs  share.rs
src/types/: error.rs  host.rs  mod.rs  record.rs  retention.rs
src/ui/: mod.rs
ui/: index.html
ui/static/: main.css  main.js
