[package]
name = "shrt"
version = "0.1.0"
authors = ["Léon ROUX <hi@usernq.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc"
tokio = { version = "1.8", features = ["fs"] }

thiserror = "1.0"
rand = "0.8"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
url = { version = "2.2.0", features = ["serde"] }
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

figment = "0.10"
log = "0.4"
simplelog = "0.10"
