[package]
name = "shrt"
version = "0.1.0"
authors = ["Léon ROUX <hi@usernq.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
tokio = { version = "1.8", features = ["fs"] }
redis = { version = "0.21", features = ["aio", "tokio-comp"] }

thiserror = "1.0"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }

serde = "1"
serde_json = "1"

figment = "0.10"
log = "0.4"
simplelog = "0.10"
